--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/cli"]
 	path = src/cli
 	url = git@github.com:daniele77/cli.git
-[submodule "src/rapidjson"]
-	path = src/rapidjson
-	url = git@github.com:Tencent/rapidjson.git
+[submodule "src/json"]
+	path = src/json
+	url = git@github.com:nlohmann/json.git
