--- a/game/gamefiles/GameRegistry.ini
+++ b/game/gamefiles/GameRegistry.ini
@@ -1,2 +1,17 @@
 ; GameRegistry.ini
 
+; This is the default registry. Every game will start off 
+; with these default values
+
+[Game]
+version=01.00.0001RC
+
+[Player]
+name=Jonah ; This is the default player name
+skill-level=1
+
+[Environment]
+stage=1
+level=1
+
+
