--- a/game/gamefiles/GameRegistry.ini
+++ b/game/gamefiles/GameRegistry.ini
@@ -1,20 +1,13 @@
-; GameRegistry.ini
-
-; This is the default registry. Every game will start off 
-; with these default values
-
+; Game generated registry
 [Game]
 version=01.00.0001RC
 
 [Player]
-name=Jonah ; This is the default player name
+name=Jonah
 skill-level=1
 
-[Environment]
+[Engine]
 stage=1
 level=1
-
-[CLI]
-last-command=
-
+last-command=./bin/cli_game-01.00.0001RC.dbg ../game/gamefiles/GameRegistry.ini 
 
