Fixed default (starting) GameRegistry.ini

--- a/game/gamefiles/GameRegistry.ini
+++ b/game/gamefiles/GameRegistry.ini
@@ -1,13 +1,15 @@
-; Game generated registry
+; GameRegistry.ini
+
+; This is the default registry. Every game will start off 
+; with these default values
+
 [Game]
 version=01.00.0001RC
 
 [Player]
-name=Jonah
+name=Jonah ; This is the default player name
 skill-level=1
 
 [Engine]
 stage=1
 level=1
-last-command=./bin/cli_game-01.00.0001RC.dbg ../game/gamefiles/GameRegistry.ini 
-
