--- a/game/gamefiles/GameRegistry.ini
+++ b/game/gamefiles/GameRegistry.ini
@@ -1,15 +1,12 @@
-; GameRegistry.ini
-
-; This is the default registry. Every game will start off 
-; with these default values
+[Engine]
+last-command = make
+level = 1
+stage = 1
 
 [Game]
-version=01.00.0001RC
+version = 01.00.0001RC
 
 [Player]
-name=Jonah ; This is the default player name
-skill-level=1
+name = Jonah ;This is the default player name
+skill-level = 1
 
-[Engine]
-stage=1
-level=1
