Modified architecture -- not building yet

--- a/game/gamefiles/Registry.ini
+++ b/game/gamefiles/Registry.ini
@@ -5,12 +5,13 @@
 
 [Game]
 version=01.00.0001RC
+level=1
 
 [Player]
 name=Jonah ; This is the default player name
 skill-level=1
 XP=0
 
-[Engine]
-stage=1
-level=1
+[Events]
+last-command=
+
