WIP: Building, not yet printing messages to users pts

--- a/game/Dockerfile
+++ b/game/Dockerfile
@@ -4,17 +4,19 @@ FROM debian:latest
 
 USER root
 RUN apt -y update
-# RUN apt install -y source
+RUN apt install -y gdb procps
 
 # Set up directories
 ENV GAMEFILES_DIR=/usr/game/gamefiles/
 
 # Copy over the source files
-CMD mkdir -p ${GAMEFILES_DIR}
+RUN mkdir -p ${GAMEFILES_DIR}
 COPY ./gamefiles ${GAMEFILES_DIR}
+COPY ./bin ${GAMEFILES_DIR}
 
 # Apply execute permissions to source files
-RUN chmod +x ${GAMEFILES_DIR}/gameStart.sh
+RUN chmod +x ${GAMEFILES_DIR}gameStart.sh
+RUN chmod +x ${GAMEFILES_DIR}Terminal
 
 # Set up a test user
 RUN adduser testuser
