Fixed seg fault; building, launching level, writing to player screen (though not just once)

--- a/game/Dockerfile
+++ b/game/Dockerfile
@@ -19,8 +19,8 @@ RUN chmod +x ${GAMEFILES_DIR}gameStart.sh
 RUN chmod +x ${GAMEFILES_DIR}Terminal
 
 # Set up a test user
-RUN adduser testuser
-USER testuser
+RUN adduser Developer --force-badname
+USER Developer
 
 # Start the game
 RUN echo ${GAMEFILES_DIR}/gameStart.sh >> ~/.bashrc
